--- a/api/routes/seller/static/styles/contact.css
+++ b/api/routes/seller/static/styles/contact.css
@@ -1,26 +1,23 @@
-.dropdown {
-	right: 4%;
+.sign-in, .sign-up {
+	display: none;
 }
 
-.signup-form {
+.dropdown {
+	right: 10%;
+}
+
+.contact-form {
 	display: block;
 	width: 60%;
 	margin: 5% auto;
 	position: relative;
 }
 
-.signup-form h1 {
+.contact-form h1 {
 	font-family: Verdana, Geneva, Tahoma, sans-serif;
 	font-size: 2rem;
 	text-align: center;
 	font-weight: lighter;
-}
-
-.signup-form h1 span {
-	font-family: 'Pacifico','Teko', 'Poppins', cursive, sans-serif;;
-	font-size: 2.5rem;
-	font-weight: bolder;
-	color: var(--bg-color);
 }
 
 label {
@@ -31,7 +28,7 @@ label {
 	font-size: 0.8rem;
 }
 
-.signup, .signup-submit {
+.contact, .contact-submit {
 	width: 60%;
 	display: block;
 	margin: 3% auto;
@@ -39,7 +36,7 @@ label {
 }
 
 .flashes {
-	background-color: rgba(184, 53, 53, 0.6);
+	background-color: rgba(53, 184, 81, 0.6);
 	height: 3rem;
 	display: flex;
 	align-items: center;
@@ -59,55 +56,24 @@ label {
 	justify-content: space-between;
 }
 
-.username {
+.my-username {
 	width: 49%;
-}
-
-.address {
-	width: 32.5%;
-}
-.section-detail {
-	margin-bottom: 0;
-}
-
-.detail {
-	width: 100%;
-	align-content: center;
-	text-align: center;
-	color: rgb(15, 14, 14);
-	font-size: 1.5rem;
 }
 
 .form-control {
 	width: 100%;
-	height: 3rem;
+	height: 2rem;
 }
 
-.bio {
+.description {
 	height: 6rem;
 	text-transform: none;
 	padding: 8px;
 }
 
-.toggle-password {
-	position: absolute;
-	z-index: 500;
-	right: 2%;
-	text-align: center;
-	background-color: rgba(224, 153, 153, 0.1);
-	color: rgba(10, 10, 10, 0.2);
-	top: 25%;
-	cursor: pointer;
-}
-
-.signup ul li {
+.contact ul li {
 	list-style-type: disc;
 	margin-left: 3%;
-}
-
-.password-control {
-	position: relative;
-	width: 100%;
 }
 
 .image-file {
@@ -115,7 +81,7 @@ label {
 	cursor: pointer;
 }
 
-.signup-submit {
+.contact-submit {
 	height: 3rem;
 	color: white;
 	background-color: var(--bg-color);
