--- a/api/routes/seller/static/styles/profile.css
+++ b/api/routes/seller/static/styles/profile.css
@@ -1,22 +1,19 @@
-.dropdown {
-	right: 4%;
-}
-
-.signup-form {
+.profile-form {
 	display: block;
 	width: 60%;
 	margin: 5% auto;
 	position: relative;
+	margin-left: 3%;
 }
 
-.signup-form h1 {
+.profile-form h1 {
 	font-family: Verdana, Geneva, Tahoma, sans-serif;
 	font-size: 2rem;
 	text-align: center;
 	font-weight: lighter;
 }
 
-.signup-form h1 span {
+.profile-form h1 span {
 	font-family: 'Pacifico','Teko', 'Poppins', cursive, sans-serif;;
 	font-size: 2.5rem;
 	font-weight: bolder;
@@ -31,7 +28,7 @@ label {
 	font-size: 0.8rem;
 }
 
-.signup, .signup-submit {
+.profile, .profile-submit {
 	width: 60%;
 	display: block;
 	margin: 3% auto;
@@ -39,7 +36,7 @@ label {
 }
 
 .flashes {
-	background-color: rgba(184, 53, 53, 0.6);
+	background-color: rgba(53, 184, 119, 0.6);
 	height: 3rem;
 	display: flex;
 	align-items: center;
@@ -51,6 +48,34 @@ label {
 
 .flash-text {
 	color: white;
+	list-style-type: none;
+}
+
+.image-box {
+	width: 45%;
+	height: 380px;
+	position: absolute;
+	right: -50%;
+	top: 2.5%;
+}
+
+.image-data {
+	display: none;
+}
+
+.product-image {
+	display: none;
+}
+
+.image-box img {
+	width: 100%;
+	height: 100%;
+	border-radius: 30px;
+	z-index: 500;
+	position: absolute;
+	top: 0;
+	left: 0;
+	cursor: pointer;
 }
 
 .multiple-box {
@@ -59,7 +84,7 @@ label {
 	justify-content: space-between;
 }
 
-.username {
+.my-username {
 	width: 49%;
 }
 
@@ -100,7 +125,7 @@ label {
 	cursor: pointer;
 }
 
-.signup ul li {
+.profile ul li {
 	list-style-type: disc;
 	margin-left: 3%;
 }
@@ -115,7 +140,7 @@ label {
 	cursor: pointer;
 }
 
-.signup-submit {
+.profile-submit {
 	height: 3rem;
 	color: white;
 	background-color: var(--bg-color);
