--- a/api/routes/seller/templates/productPage.html
+++ b/api/routes/seller/templates/productPage.html
@@ -59,7 +59,7 @@
 					<p id="edit-price" class="edit-form">EDIT</p>
 				</div>
 				<div class="detail-name">
-					<label for="{{ form.discount.id }}" class="name-value name-box">Discount</label>
+					<label for="{{ form.discount.id }}" class="name-value name-box">Discount Percentage</label>
 					<div class="value-box">
 						{{ form.discount(class="form-control name-value", readonly=true) }}
 						<ul>
