--- a/api/routes/buyer/templates/base.html
+++ b/api/routes/buyer/templates/base.html
@@ -22,10 +22,10 @@
 	<body>
 		<!-- header begins here -->
 		<header class="other-services">
-				<a href="#o-pay"><i class="bx bx-money"></i> O-Pay</a>
-				<a href="#o-logistics"><i class="bx bx-bus"></i>O-Logistics</a>
+				<a href="#o-pay" class="blur"><i class="bx bx-money"></i> O-Pay</a>
+				<a href="#o-logistics" class="blur"><i class="bx bx-bus"></i>O-Logistics</a>
 				<a href="/o-seller"><i class="bx bx-group" ></i>O-Seller</a>
-				<a href="#o-food"><i class="bx bx-bowl-rice"></i>O-Food</a>
+				<a href="#o-food" class="blur"><i class="bx bx-bowl-rice"></i>O-Food</a>
 		</header>
 		<header class="my-header">
 			<a class="logo" href="/">Odogwu<span>S</span>tore</a>
