--- a/api/routes/seller/static/styles/base.css
+++ b/api/routes/seller/static/styles/base.css
@@ -57,6 +57,10 @@ li {
 	color: var(--bg-color);
 }
 
+.blur {
+	opacity: 0.2;
+}
+
 .other-services a:hover {
 	color: var(--bg-color);
 }
@@ -64,6 +68,7 @@ li {
 .other-services a:active {
 	color: grey;
 }
+
 /* - End of other-services header style -*/
 
 /* - Style for header - */
