--- a/api/routes/seller/templates/base_template.html
+++ b/api/routes/seller/templates/base_template.html
@@ -22,10 +22,10 @@
 	<body>
 		<!-- header begins here-->
 		<header class="other-services">
-			<a href="#o-pay"><i class="bx bx-money"></i> O-Pay</a>
-			<a href="#o-logistics"><i class="bx bx-bus"></i>O-Logistics</a>
+			<a href="#o-pay" class="blur"><i class="bx bx-money"></i> O-Pay</a>
+			<a href="#o-logistics" class="blur"><i class="bx bx-bus"></i>O-Logistics</a>
 			<a href="{{ url_for('buyer.homepage') }}"><i class='bx bxs-store-alt'></i>O-Store</a>
-			<a href="#o-food"><i class="bx bx-bowl-rice"></i>O-Food</a>
+			<a href="#o-food" class="blur"><i class="bx bx-bowl-rice"></i>O-Food</a>
 		</header>
 		<header class="header">
 			<section class="main-header">
